# gfarm-s3-minio-web

./: INSTALL.en  INSTALL.en.md  INSTALL.ja  INSTALL.ja.md  LICENSE  README.md  SETTINGS.ja.md  configure  configure.ac  libtool  makefile  makefile.in  old-INSTALL.en.md  old-SETTINGS.en.md  router
cli/: subr  t11
con/: con  gfarm-settings  install_secret  makefile  myserver.conf.in  private-setting  server.crt  site-setting  xvi
con/etc/: gfarm_s3_local_user_map.example  myserver.conf.in  server.csr  server.key
doc/: gateway-gfarm.txt  gfarmClient.txt  gsissh.txt  gss.txt  todo.txt
docker/: .dockerignore  .gitignore  Makefile  README.md  RECREATE.sh  config.env-docker_dev  docker-compose.override.dev.yml  docker-compose.override.example-hpci.yml  docker-compose.override.yml.http  docker-compose.override.yml.https  docker-compose.selfsigned.yml  docker-compose.yml  wait.sh
docker/copy_home/: Dockerfile  inotify_copy.sh
docker/gfminio/: Dockerfile  entrypoint.sh  index.html  logtail.sh  nginx-gfarm-s3-include.conf  nginx-gfarm-s3-site.conf  nginx-gfarm-s3.conf  run_aws.py  supervisord.conf  test-s3.sh
docker/proxy/: default_location  proxy.conf
docker/revproxy/: default_location  proxy.conf
etc/: all  apache-gfarm-s3-wsgi.conf.in  apache-gfarm-s3.conf.in  cln  gfarm-s3-router.service.in  gfarm-s3-webui.service.in  gfarm-s3.conf  gfarm-s3.conf.in  gfarm.conf  gfarm.pc  gfarm.pc.in  gfarm_s3_local_user_map  gunicorn.service.in  httpd.conf.in  ins  makefile  makefile.in  nginx-gfarm-s3-generated.conf.in  nginx-gfarm-s3.conf  nginx-gfarm-s3.conf.in  nginx.conf.in  secret_key  sudoers  sudoers.in  tst
makes/: build-conf  build-conf.in
minio/: build  build.sh  go-install.sh  makefile  makefile.in
router/: myaiohttp.py  myrequests.py  myurllib.py  router.py  run
sbin/: con  ins  install-prerequistes  makefile  mnt  mpl  newkey  site-setting
sbin/etc/: newkey
test/: cu1  daemon.c  gfreg-test  keygen  makefile  nas1  pp.py  run  runminio.py  s3client.py  tcpdmp  test-komoku.txt  test.py  test_s3.py  tmd  trace1
web/: makefile.in  rungunicorn.in  runserver.in
web/gfarm-s3/console/: cmd.py  makefile  urls.py  views.py
web/gfarm-s3/console/locale/en/LC_MESSAGES/: django.mo  django.po
web/gfarm-s3/console/locale/ja/LC_MESSAGES/: django.mo  django.po
web/gfarm-s3/console/static/console/: myscript.js  package.json  style.css
web/gfarm-s3/console/templates/console/: aclfile.html  base.html  chgkeyresult.html  list.html  login.html  result.html
web/gfarm-s3/gfarms3/: conf.py.in  settings.py  urls.py  wsgi.py
web/gfarm-s3/router/: router.py
webui/: all  makefile  makefile.in  run  run3  rungunicorn  rungunicorn.in  runserver  runserver.in  stopserver
webui/gfarm-s3/: manage.py
webui/gfarm-s3/console/: admin.py  apps.py  cmd.py  models.py  urls.py  views.py
webui/gfarm-s3/console/locale/en/LC_MESSAGES/: django.mo  django.po
webui/gfarm-s3/console/locale/ja/LC_MESSAGES/: django.mo  django.po
webui/gfarm-s3/console/static/console/: myscript.js  package.json  style.css
webui/gfarm-s3/console/templates/console/: aclfile.html  application.html  base.html  index.html  list.html  login.html  result.html
webui/gfarm-s3/gfarms3/: settings.py  urls.py
www/: index.html
